--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
   <div class="container">
     <div id="background">
-      <div class="splashButtons">
-          
+      <div class="splashButtons" id="buttons">
+        <button class="btn1" id="enter"></button>
+        <button class="btn1" id="darkMode"></button>
       </div>
       <!-- <img class="hero-image" src="img/*.jpg" alt="*"> -->
 
