--- a/index.html
+++ b/index.html
@@ -13,14 +13,11 @@
   <div class="container">
     <div id="background">
       <div class="splashButtons" id="buttons">
-        <button class="btn1" id="enter"></button>
-        <button class="btn1" id="darkMode"></button>
-      </div>
-      <!-- <img class="hero-image" src="img/*.jpg" alt="*"> -->
-
-    </div>
+        <!-- <button class="btn1" id="enter"></button> -->
+        <!-- <button class="btn1" id="darkMode"></button> -->
+      
   </div>
-  <div class="footer">
+  <!-- <div class="footer">
     <p>Copyright <em>2021</em> Brian Sturgis</p>
-  </div>
+  </div> -->
 </html>
