further testing on layering elements in css with z-index and position elements

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
       <div class="splashButtons" id="buttons">
         <!-- <button class="btn1" id="enter"></button> -->
         <!-- <button class="btn1" id="darkMode"></button> -->
-      
-  </div>
+    </div>
+    <div class="greeting">
+      <img src="assets/greetings.png" alt="greetings_programs">
+    </div>
   <!-- <div class="footer">
     <p>Copyright <em>2021</em> Brian Sturgis</p>
   </div> -->
