finish index.html wireframe button tests

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <div class="container">
     <div id="background">
       <div class="splashButtons" id="buttons">
-        <!-- <button class="btn1" id="enter"></button> -->
-        <!-- <button class="btn1" id="darkMode"></button> -->
+        <a href="*" type="button" class="btn btn-link" id="enter">enter</a>
+        <a href="*" type="button" class="btn btn-link" id="darkMode">DARK MODE</a> 
       </div>
       <div class="greeting"> 
         <img src="assets/greetings.png" alt="greetings_programs">
