add buttons to home.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <div id="background">
       <div class="splashButtons" id="buttons">
-        <a href="*" type="button" class="btn btn-link" id="enter">enter</a>
+        <a href="home.html" type="button" class="btn btn-link" id="enter">enter</a>
         <a href="*" type="button" class="btn btn-link" id="darkMode">DARK MODE</a> 
       </div>
       <div class="greeting"> 
