--- a/home.html
+++ b/home.html
@@ -3,10 +3,23 @@
 <head>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <!-- <link href="*" rel="stylesheet">    fonts go here -->
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link href="css/homeStyles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/anime.js"></script>
   <script src="js/app.js"></script>
   <script src="js/scripts.js"></script>
   <title>HOME</title>
 </head>
+<div class="container">
+  <div id="background">
+    <div class="homeButtons" id="buttons">
+      <a href="*" type="button" class="btn btn-link" id="aboutMe">ABOUT ME</a>
+      <a href="*" type="button" class="btn btn-link" id="projects">PROJECTS</a>
+      <a href="*" type="button" class="btn btn-link" id="gallery">GALLERY</a> 
+      <a href="*" type="button" class="btn btn-link" id="darkMode">DARKMODE</a> 
+    </div>
+    <div class="greeting"> 
+      <img src="assets/greetings.png" alt="greetings_programs">
+    </div> 
+  </div>
+</div>
