complete build for home html

--- a/home.html
+++ b/home.html
@@ -18,8 +18,8 @@
       <a href="*" type="button" class="btn btn-link" id="gallery">GALLERY</a> 
       <a href="*" type="button" class="btn btn-link" id="darkMode">DARKMODE</a> 
     </div>
-    <div class="greeting"> 
-      <img src="assets/greetings.png" alt="greetings_programs">
+    <div class="navbar"> 
+      <h1>home page</h1>
     </div> 
   </div>
 </div>
