finish linking index,home,aboutMe html files

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -3,7 +3,7 @@
 <head>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <!-- <link href="*" rel="stylesheet">    fonts go here -->
-  <link href="css/homeStyles.css" rel="stylesheet" type="text/css">
+  <link href="css/aboutMeStyles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/anime.js"></script>
   <script src="js/app.js"></script>
@@ -12,8 +12,8 @@
 </head>
 <div class="container">
   <div id="background">
-    <div class="homeButtons">
-      <a href="aboutMe.html" type="button" class="btn btn-link" id="aboutMe">ABOUT ME</a>
+    <div class="aboutMeButtons">
+      <a href="home.html" type="button" class="btn btn-link" id="home">HOME</a>
       <a href="*" type="button" class="btn btn-link" id="projects">PROJECTS</a>
       <a href="*" type="button" class="btn btn-link" id="gallery">GALLERY</a> 
       <a href="*" type="button" class="btn btn-link" id="darkMode">DARKMODE</a> 
