connect all pages in light mode currently with navigation fucntionality

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -8,18 +8,19 @@
   <script src="js/anime.js"></script>
   <script src="js/app.js"></script>
   <script src="js/scripts.js"></script>
-  <title>HOME</title>
+  <title>ABOUT ME</title>
 </head>
-<div class="container">
-  <div id="background">
-    <div class="aboutMeButtons">
-      <a href="home.html" type="button" class="btn btn-link" id="home">HOME</a>
-      <a href="*" type="button" class="btn btn-link" id="projects">PROJECTS</a>
-      <a href="*" type="button" class="btn btn-link" id="gallery">GALLERY</a> 
-      <a href="*" type="button" class="btn btn-link" id="darkMode">DARKMODE</a> 
+  <div class="container">
+    <div id="background">
+      <div class="aboutMeButtons">
+        <a href="home.html" type="button" class="btn btn-link" id="home">HOME</a>
+        <a href="projects.html" type="button" class="btn btn-link" id="projects">PROJECTS</a>
+        <a href="gallery.html" type="button" class="btn btn-link" id="gallery">GALLERY</a> 
+        <a href="DmAboutMe" type="button" class="btn btn-link" id="darkMode">DARKMODE</a> 
+      </div>
+      <div class="navbar"> 
+        <h1>about me</h1>
+      </div> 
     </div>
-    <div class="navbar"> 
-      <h1>home page</h1>
-    </div> 
   </div>
-</div>
+</html>
