--- a/gallery.html
+++ b/gallery.html
@@ -3,23 +3,23 @@
 <head>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <!-- <link href="*" rel="stylesheet">    fonts go here -->
-  <link href="css/projectStyles.css" rel="stylesheet" type="text/css">
+  <link href="css/aboutMeStyles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/anime.js"></script>
   <script src="js/app.js"></script>
   <script src="js/scripts.js"></script>
-  <title>PROJECTS</title>
+  <title>GALLERY</title>
 </head>
   <div class="container">
     <div id="background">
-      <div class="projectsMeButtons">
+      <div class="galleryMeButtons">
         <a href="home.html" type="button" class="btn btn-link" id="home">HOME</a>
         <a href="projects.html" type="button" class="btn btn-link" id="projects">PROJECTS</a>
-        <a href="gallery.html" type="button" class="btn btn-link" id="gallery">GALLERY</a> 
-        <a href="Dmprojects.html" type="button" class="btn btn-link" id="darkMode">DARKMODE</a> 
+        <a href="aboutMe.html" type="button" class="btn btn-link" id="aboutMe">ABOUT ME</a> 
+        <a href="DmGallery" type="button" class="btn btn-link" id="darkMode">DARKMODE</a> 
       </div>
       <div class="navbar"> 
-        <h1>mother fucking projects</h1>
+        <h1>gallery yo</h1>
       </div> 
     </div>
   </div>
