--- a/home.html
+++ b/home.html
@@ -10,16 +10,17 @@
   <script src="js/scripts.js"></script>
   <title>HOME</title>
 </head>
-<div class="container">
-  <div id="background">
-    <div class="homeButtons">
-      <a href="aboutMe.html" type="button" class="btn btn-link" id="aboutMe">ABOUT ME</a>
-      <a href="*" type="button" class="btn btn-link" id="projects">PROJECTS</a>
-      <a href="*" type="button" class="btn btn-link" id="gallery">GALLERY</a> 
-      <a href="*" type="button" class="btn btn-link" id="darkMode">DARKMODE</a> 
+  <div class="container">
+    <div id="background">
+      <div class="homeButtons">
+        <a href="aboutMe.html" type="button" class="btn btn-link" id="aboutMe">ABOUT ME</a>
+        <a href="projects.html" type="button" class="btn btn-link" id="projects">PROJECTS</a>
+        <a href="gallery.html" type="button" class="btn btn-link" id="gallery">GALLERY</a> 
+        <a href="DmHome.html" type="button" class="btn btn-link" id="darkMode">DARKMODE</a> 
+      </div>
+      <div class="navbar"> 
+        <h1>home page</h1>
+      </div> 
     </div>
-    <div class="navbar"> 
-      <h1>home page</h1>
-    </div> 
   </div>
-</div>
+</html>
