--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
   <div class="container">
     <div id="background">
-      <div class="splashButtons" id="buttons">
-        <a href="home.html" type="button" class="btn btn-link" id="enter">enter</a>
-        <a href="*" type="button" class="btn btn-link" id="darkMode">DARK MODE</a> 
+      <div class="indexButtons" id="buttons">
+        <a href="home.html" type="button" class="btn btn-link" id="enter">ENTER SITE</a>
+        <a href="DmHome.html" type="button" class="btn btn-link" id="darkMode">DARK MODE HOME</a> 
       </div>
       <div class="greeting"> 
         <img src="assets/greetings.png" alt="greetings_programs">
