will change wireframe BG for use on all pages

--- a/home.html
+++ b/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <!-- <link href="*" rel="stylesheet">    fonts go here -->
   <link href="css/homeStyles.css" rel="stylesheet" type="text/css">
@@ -10,6 +11,7 @@
   <script src="js/scripts.js"></script>
   <title>HOME</title>
 </head>
+<body>
   <div class="container">
     <div id="background">
       <div class="homeButtons">
@@ -23,4 +25,5 @@
       </div> 
     </div>
   </div>
+</body>
 </html>
