update overall cleanlieness of project in current state

--- a/home.html
+++ b/home.html
@@ -12,18 +12,17 @@
   <title>HOME</title>
 </head>
 <body>
-  <div class="container">
-    <div id="background">
-      <div class="homeButtons">
-        <a href="aboutMe.html" type="button" class="btn btn-link" id="aboutMe">ABOUT ME</a>
-        <a href="projects.html" type="button" class="btn btn-link" id="projects">PROJECTS</a>
-        <a href="gallery.html" type="button" class="btn btn-link" id="gallery">GALLERY</a> 
-        <a href="DmHome.html" type="button" class="btn btn-link" id="darkMode">DARKMODE</a> 
-      </div>
-      <div class="navbar"> 
-        <h1>home page</h1>
-      </div> 
+  <div id="background">
+    <div class="homeButtons">
+      <a href="aboutMe.html" type="button" class="btn btn-link" id="aboutMe">ABOUT ME</a>
+      <a href="projects.html" type="button" class="btn btn-link" id="projects">PROJECTS</a>
+      <a href="gallery.html" type="button" class="btn btn-link" id="gallery">GALLERY</a> 
+      <a href="DmHome.html" type="button" class="btn btn-link" id="darkMode">DARKMODE</a> 
     </div>
+    
+    <!-- <div class="container">
+      <img class="hero-image" src="./../assets/template.png" alt="background image of border lines and name">
+    </div> -->
   </div>
 </body>
 </html>
