update overall home.html with wirefram back ground

--- a/home.html
+++ b/home.html
@@ -12,17 +12,16 @@
   <title>HOME</title>
 </head>
 <body>
-  <div id="background">
-    <div class="homeButtons">
-      <a href="aboutMe.html" type="button" class="btn btn-link" id="aboutMe">ABOUT ME</a>
-      <a href="projects.html" type="button" class="btn btn-link" id="projects">PROJECTS</a>
-      <a href="gallery.html" type="button" class="btn btn-link" id="gallery">GALLERY</a> 
-      <a href="DmHome.html" type="button" class="btn btn-link" id="darkMode">DARKMODE</a> 
-    </div>
-    
-    <!-- <div class="container">
-      <img class="hero-image" src="./../assets/template.png" alt="background image of border lines and name">
-    </div> -->
-  </div>
+  <nav>
+    <ul>
+      <li><a href="aboutMe.html" type="button" class="btn btn-link" id="aboutMe">ABOUT ME</a></li>
+      <li></li><a href="projects.html" type="button" class="btn btn-link" id="projects">PROJECTS</a></li>
+      <li></li><a href="gallery.html" type="button" class="btn btn-link" id="gallery">GALLERY</a></li> 
+      <li></li><a href="DmHome.html" type="button" class="btn btn-link" id="darkMode">DARKMODE</a></li> 
+    </ul>
+  </nav> 
+  <div class="greeting"> 
+    <img src="assets/teplate.png" alt="greetings_programs">
+  </div> 
 </body>
 </html>
