finish layout sizing for fullscreen only

--- a/gallery.html
+++ b/gallery.html
@@ -18,9 +18,10 @@
         <a href="aboutMe.html" type="button" class="btn btn-link" id="aboutMe">ABOUT ME</a> 
         <a href="DmGallery" type="button" class="btn btn-link" id="darkMode">DARKMODE</a> 
       </div>
-      <div class="navbar"> 
-        <h1>gallery yo</h1>
-      </div> 
+      
     </div>
   </div>
+  <div class="template"> 
+    <img src="assets/teplate.png" alt="web template wireframe">
+  </div> 
 </html>
