--- a/home.html
+++ b/home.html
@@ -12,16 +12,16 @@
   <title>HOME</title>
 </head>
 <body>
-  <nav>
+  <!-- <nav>
     <ul>
       <li><a href="aboutMe.html" type="button" class="btn btn-link" id="aboutMe">ABOUT ME</a></li>
       <li></li><a href="projects.html" type="button" class="btn btn-link" id="projects">PROJECTS</a></li>
       <li></li><a href="gallery.html" type="button" class="btn btn-link" id="gallery">GALLERY</a></li> 
       <li></li><a href="DmHome.html" type="button" class="btn btn-link" id="darkMode">DARKMODE</a></li> 
     </ul>
-  </nav> 
-  <div class="greeting"> 
-    <img src="assets/teplate.png" alt="greetings_programs">
+  </nav>  -->
+  <div class="template"> 
+    <img src="assets/teplate.png" alt="web template wireframe">
   </div> 
 </body>
 </html>
