add more stying to home.css

--- a/home.html
+++ b/home.html
@@ -12,16 +12,15 @@
   <title>HOME</title>
 </head>
 <body>
-  <!-- <nav>
-    <ul>
-      <li><a href="aboutMe.html" type="button" class="btn btn-link" id="aboutMe">ABOUT ME</a></li>
-      <li></li><a href="projects.html" type="button" class="btn btn-link" id="projects">PROJECTS</a></li>
-      <li></li><a href="gallery.html" type="button" class="btn btn-link" id="gallery">GALLERY</a></li> 
-      <li></li><a href="DmHome.html" type="button" class="btn btn-link" id="darkMode">DARKMODE</a></li> 
-    </ul>
-  </nav>  -->
-  <div class="template"> 
-    <img src="assets/teplate.png" alt="web template wireframe">
-  </div> 
+  <div class="container" id="widget">
+    </div>
+    <nav>
+      <a href="gallery.html" input type="image" id="gallerybutton" alt="gallery.html" 
+      src="assets/gallerybutton.png"></a>
+    </nav> 
+    <div class="templatewireframe"> 
+      <img src="assets/teplate.png" alt="web template wireframe">
+    </div> 
+  </div>
 </body>
 </html>
