--- a/projects.html
+++ b/projects.html
@@ -10,17 +10,18 @@
   <script src="js/scripts.js"></script>
   <title>PROJECTS</title>
 </head>
-  <div class="container">
+  <body>
     <div id="background">
       <div class="projectsMeButtons">
-        <a href="home.html" type="button" class="btn btn-link" id="home">HOME</a>
+        <a href="home.html" type="image" class="btn btn-link" id="home">HOME</a>
         <a href="projects.html" type="button" class="btn btn-link" id="projects">PROJECTS</a>
         <a href="gallery.html" type="button" class="btn btn-link" id="gallery">GALLERY</a> 
         <a href="Dmprojects.html" type="button" class="btn btn-link" id="darkMode">DARKMODE</a> 
       </div>
-      <div class="navbar"> 
-        <h1>mother fucking projects</h1>
+      <div class="templatewireframe"> 
+        <img src="assets/teplate.png" alt="web template wireframe">
       </div> 
     </div>
-  </div>
+    
+  </body>
 </html>
