be a good pass for the buttons used through out UI moving forward

--- a/home.html
+++ b/home.html
@@ -12,12 +12,10 @@
   <title>HOME</title>
 </head>
 <body>
-  <div class="container" id="widget">
-    </div>
-    <nav>
-      <a href="gallery.html" input type="image" id="gallerybutton" alt="gallery.html" 
-      src="assets/gallerybutton.png"></a>
-    </nav> 
+  <div class="indexButtons" id="buttons">
+    <a href="home.html" type="button" id="enter">ENTER SITE</a>
+    <a href="DmHome.html" type="button"  id="darkMode">DARK MODE HOME</a> 
+  </div>
     <div class="templatewireframe"> 
       <img src="assets/teplate.png" alt="web template wireframe">
     </div> 
