--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
   <title>GREETINGS PROGRAMS</title>
 </head>
   <div class="container">
-    <div id="background">
-      <div class="indexButtons" id="buttons">
-        <a href="home.html" type="button" class="btn btn-link" id="enter">ENTER SITE</a>
-        <a href="DmHome.html" type="button" class="btn btn-link" id="darkMode">DARK MODE HOME</a> 
-      </div>
-      <div class="greeting"> 
-        <img src="assets/greetings.png" alt="greetings_programs">
-      </div> 
+    <div class="indexButtons" id="buttons">
+      <a href="home.html" type="button" id="enter">ENTER SITE</a>
+      <a href="DmHome.html" type="button"  id="darkMode">DARK MODE HOME</a> 
     </div>
+    <div class="greeting"> 
+      <img src="assets/greetings.png" alt="greetings_programs">
+    </div> 
   </div>
 </html>
