change from nav buttons to reactive nave sidebar

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -10,17 +10,19 @@
   <script src="js/scripts.js"></script>
   <title>ABOUT ME</title>
 </head>
-  <div class="container">
-    <div id="background">
-      <div class="aboutMeButtons">
-        <a href="home.html" type="button" class="btn btn-link" id="home">HOME</a>
-        <a href="projects.html" type="button" class="btn btn-link" id="projects">PROJECTS</a>
-        <a href="gallery.html" type="button" class="btn btn-link" id="gallery">GALLERY</a> 
-        <a href="DmAboutMe" type="button" class="btn btn-link" id="darkMode">DARKMODE</a> 
-      </div>
-      <div class="navbar"> 
-        <h1>about me</h1>
-      </div> 
+  <body>
+    <div class="container">
+      <header>
+        <div class="sidebar">
+          <a class="active" href="aboutMe.html">about me</a>
+          <a href="gallery.html">gallery</a>
+          <a href="projects.html">projects</a>
+          <a href="index.html">index</a>
+        </div>
+      </header>
     </div>
-  </div>
+    <div class="templatewireframe"> 
+      <img src="assets/teplate.png" alt="web template wireframe" style="width: 100%">
+    </div> 
+  </body>
 </html>
