--- a/gallery.html
+++ b/gallery.html
@@ -10,18 +10,19 @@
   <script src="js/scripts.js"></script>
   <title>GALLERY</title>
 </head>
-  <div class="container">
-    <div id="background">
-      <div class="galleryMeButtons">
-        <a href="home.html" type="button" class="btn btn-link" id="home">HOME</a>
-        <a href="projects.html" type="button" class="btn btn-link" id="projects">PROJECTS</a>
-        <a href="aboutMe.html" type="button" class="btn btn-link" id="aboutMe">ABOUT ME</a> 
-        <a href="DmGallery" type="button" class="btn btn-link" id="darkMode">DARKMODE</a> 
-      </div>
-      
+  <body>
+    <div class="container">
+      <header>
+        <div class="sidebar">
+          <a class="active" href="home.html">HOME</a>
+          <a href="gallery.html">GALLERY</a>
+          <a href="projects.html">PROJECTS</a>
+          <a href="aboutMe.html">ABOUT ME</a>
+        </div>
+      </header>
     </div>
-  </div>
-  <div class="template"> 
-    <img src="assets/teplate.png" alt="web template wireframe">
-  </div> 
+    <div class="templatewireframe"> 
+      <img src="assets/home.png" alt="web template wireframe" style="width: 100%">
+    </div> 
+  </body>
 </html>
