--- a/projects.html
+++ b/projects.html
@@ -10,18 +10,21 @@
   <script src="js/scripts.js"></script>
   <title>PROJECTS</title>
 </head>
+<body>
   <body>
-    <div id="background">
-      <div class="projectsMeButtons">
-        <a href="home.html" type="image" class="btn btn-link" id="home">HOME</a>
-        <a href="projects.html" type="button" class="btn btn-link" id="projects">PROJECTS</a>
-        <a href="gallery.html" type="button" class="btn btn-link" id="gallery">GALLERY</a> 
-        <a href="Dmprojects.html" type="button" class="btn btn-link" id="darkMode">DARKMODE</a> 
-      </div>
-      <div class="templatewireframe"> 
-        <img src="assets/teplate.png" alt="web template wireframe">
-      </div> 
+    <div class="container">
+      <header>
+        <div class="sidebar">
+          <a class="active" href="home.html">HOME</a>
+          <a href="gallery.html">GALLERY</a>
+          <a href="projects.html">PROJECTS</a>
+          <a href="aboutMe.html">ABOUT ME</a>
+        </div>
+      </header>
     </div>
-    
+    <div class="templatewireframe"> 
+      <img src="assets/home.png" alt="web template wireframe" style="width: 100%">
+    </div> 
   </body>
+</body>
 </html>
