--- a/home.html
+++ b/home.html
@@ -12,13 +12,19 @@
   <title>HOME</title>
 </head>
 <body>
-  <div class="indexButtons" id="buttons">
-    <a href="home.html" type="button" id="enter">ENTER SITE</a>
-    <a href="DmHome.html" type="button"  id="darkMode">DARK MODE HOME</a> 
+  <div class="container">
+    <header>
+      <div class="sidebar">
+        <a class="active" href="home.html">HOME</a>
+        <a href="aboutMe.html">ABOUT ME</a>
+        <a href="gallery.html">GALLERY</a>
+        <a href="projects.html">PROJECTS</a>
+        
+      </div>
+    </header>
   </div>
-    <div class="templatewireframe"> 
-      <img src="assets/teplate.png" alt="web template wireframe">
-    </div> 
-  </div>
+  <div class="templatewireframe"> 
+    <img src="assets/home.png" alt="web template wireframe" style="width: 100%">
+  </div> 
 </body>
 </html>
