delete projects.html and css to consolidate project

--- a/gallery.html
+++ b/gallery.html
@@ -14,15 +14,22 @@
     <div class="container">
       <header>
         <div class="sidebar">
-          <a class="active" href="home.html">HOME</a>
-          <a href="gallery.html">GALLERY</a>
-          <a href="projects.html">PROJECTS</a>
+          <a class="active" href="gallery.html">GALLERY</a>
+          <a href="home.html">HOME</a>
           <a href="aboutMe.html">ABOUT ME</a>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <a href="gallery.html">GALLERY</a>
+          <a href="gallery.html">GALLERY</a>
+          <a href="gallery.html">GALLERY</a>
         </div>
       </header>
     </div>
-    <div class="templatewireframe"> 
+    <!-- <div class="templatewireframe"> 
       <img src="assets/home.png" alt="web template wireframe" style="width: 100%">
-    </div> 
+    </div>  -->
   </body>
 </html>
