--- a/home.html
+++ b/home.html
@@ -17,9 +17,7 @@
       <div class="sidebar">
         <a class="active" href="home.html">HOME</a>
         <a href="aboutMe.html">ABOUT ME</a>
-        <a href="gallery.html">GALLERY</a>
-        <a href="projects.html">PROJECTS</a>
-        
+        <a href="gallery.html">PROJECTS</a>
       </div>
     </header>
   </div>
