--- a/aboutMe.html
+++ b/aboutMe.html
@@ -15,11 +15,15 @@
       <header>
         <div class="sidebar">
           <a class="active" href="aboutMe.html">about me</a>
-          <a href="gallery.html">gallery</a>
-          <a href="projects.html">projects</a>
-          <a href="index.html">index</a>
+          <a href="gallery.html">PROJECTS</a>
+          <a href="home.html">HOME</a>
         </div>
       </header>
+    </div>
+    <div class="wrapper">
+      <section class="profileHeader">
+        <p style="font-size:80%;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.</p>
+      </section>
     </div>
     <div class="templatewireframe"> 
       <img src="assets/teplate.png" alt="web template wireframe" style="width: 100%">
