create a complete wireframe and a wireframe branch

--- a/gallery.html
+++ b/gallery.html
@@ -22,9 +22,9 @@
           <br>
           <br>
           <br>
-          <a href="gallery.html">GALLERY</a>
-          <a href="gallery.html">GALLERY</a>
-          <a href="gallery.html">GALLERY</a>
+          <a href="gallery.html">PROJECT 1</a>
+          <a href="gallery.html">PROJECT 2</a>
+          <a href="gallery.html">PROJECT 3</a>
         </div>
       </header>
     </div>
