--- a/aboutMe.html
+++ b/aboutMe.html
@@ -11,6 +11,11 @@
   <title>ABOUT ME</title>
 </head>
   <body>
+    <div class ="hero">
+      <video playsinline autoplay muted loop id="vid">
+        <source src="vid/1_1.mp4" type="video/mp4"></source>
+      </video>
+    </div>
     <div class="container">
       <header>
         <div class="sidebar">
@@ -25,8 +30,6 @@
         <p style="font-size:80%;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.</p>
       </section>
     </div>
-    <!-- <div class="templatewireframe"> 
-      <img src="assets/teplate.png" alt="web template wireframe" style="width: 100%">
-    </div>  -->
+    
   </body>
 </html>
