--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <!-- <link href="*" rel="stylesheet">    fonts go here -->
-  <link href="css/aboutMeStyles.css" rel="stylesheet" type="text/css">
+  <link href="css/galleryStyles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/anime.js"></script>
   <script src="js/app.js"></script>
@@ -28,8 +28,40 @@
         </div>
       </header>
     </div>
-    <!-- <div class="templatewireframe"> 
-      <img src="assets/home.png" alt="web template wireframe" style="width: 100%">
-    </div>  -->
+    <div class="responsive">
+      <div class="gallery">
+        <a target="_blank" href="pics/pic1.jpg">
+          <img src="pics/pic1.jpg" alt="Cinque Terre" width="600" height="400">
+        </a>
+      </div>
+    </div>
+    <div class="responsive">
+      <div class="gallery">
+        <a target="_blank" href="pics/pic2.jpg">
+          <img src="pics/pic2.jpg" alt="Forest" width="600" height="400">
+        </a>
+        <!-- <div class="desc">Add a description of the image here</div> -->
+      </div>
+    </div>
+    
+    <div class="responsive">
+      <div class="gallery">
+        <a target="_blank" href="pics/pic3.jpg">
+          <img src="pics/pic3.JPG" alt="Northern Lights" width="600" height="400">
+        </a>
+      </div>
+    </div>
+    <div class="responsive">
+      <div class="gallery">
+        <a target="_blank" href="pics/pic4.jpg">
+          <img src="pics/pic4.jpg" alt="Mountains" width="600" height="400">
+        </a>
+      </div>
+    </div>
+    <div class="clearfix"></div>
+    <div style="padding:6px;">
+      <p>This example use media queries to re-arrange the images on different screen sizes: for screens larger than 700px wide, it will show four images side by side, for screens smaller than 700px, it will show two images side by side. For screens smaller than 500px, the images will stack vertically (100%).</p>
+      <p>You will learn more about media queries and responsive web design later in our CSS Tutorial.</p>
+    </div>
   </body>
 </html>
