--- a/gallery.html
+++ b/gallery.html
@@ -33,28 +33,23 @@
         <a target="_blank" href="pics/pic1.jpg">
           <img src="pics/pic1.jpg" alt="Cinque Terre" width="600" height="400">
         </a>
-      </div>
-    </div>
-    <div class="responsive">
-      <div class="gallery">
         <a target="_blank" href="pics/pic2.jpg">
           <img src="pics/pic2.jpg" alt="Forest" width="600" height="400">
         </a>
-        <!-- <div class="desc">Add a description of the image here</div> -->
-      </div>
-    </div>
-    
-    <div class="responsive">
-      <div class="gallery">
         <a target="_blank" href="pics/pic3.jpg">
           <img src="pics/pic3.JPG" alt="Northern Lights" width="600" height="400">
         </a>
-      </div>
-    </div>
-    <div class="responsive">
-      <div class="gallery">
         <a target="_blank" href="pics/pic4.jpg">
           <img src="pics/pic4.jpg" alt="Mountains" width="600" height="400">
+        </a>
+        <a target="_blank" href="pics/pic4.jpg">
+          <img src="pics/pic4.jpg" alt="Mountains" width="600" height="400">
+        </a>
+        <a target="_blank" href="pics/pic5.jpg">
+          <img src="pics/pic5.jpg" alt="Cinque Terre" width="600" height="400">
+        </a>
+        <a target="_blank" href="pics/pic6.jpg">
+          <img src="pics/pic6.jpg" alt="Cinque Terre" width="600" height="400">
         </a>
       </div>
     </div>
