add further styling and lay in text

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -19,7 +19,7 @@
     <div class="container">
       <header>
         <div class="sidebar">
-          <a class="active" href="aboutMe.html">about me</a>
+          <a class="active" href="aboutMe.html">ABOUT ME</a>
           <a href="gallery.html">GALLERY</a>
           <a href="home.html">HOME</a>
         </div>
