--- a/home.html
+++ b/home.html
@@ -17,7 +17,21 @@
       <div class="sidebar">
         <a class="active" href="home.html">HOME</a>
         <a href="aboutMe.html">ABOUT ME</a>
-        <a href="gallery.html">gallery</a>
+        <a href="gallery.html">GALLERY</a>
+        <br>
+        <br>
+        <br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br>
+        <a href="https://github.com/BrianSturgis">GIT HUB</a>
+        <a href="https://www.instagram.com/sturujisu/">INSTAGRAM</a>
+        <a href="https://www.imdb.com/name/nm4234655/?ref_=fn_al_nm_1">IMDB</a>
       </div>
     </header>
   </div>
