--- a/gallery.html
+++ b/gallery.html
@@ -28,6 +28,21 @@
         </div>
       </header>
     </div>
+    <div class="wrapper1">
+      <section class="profileHeader">
+        <p style="font-size:80%;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.</p>
+      </section>
+    </div>
+    <div class="wrapper2">
+      <section class="profileHeader">
+        <p style="font-size:80%;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.</p>
+      </section>
+    </div>
+    <div class="wrapper3">
+      <section class="profileHeader">
+        <p style="font-size:80%;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.</p>
+      </section>
+    </div>
     <div class="responsive">
       <div class="gallery">
         <a target="_blank" href="pics/pic1.jpg">
@@ -42,8 +57,8 @@
         <a target="_blank" href="pics/pic4.jpg">
           <img src="pics/pic4.jpg" alt="Mountains" width="600" height="400">
         </a>
-        <a target="_blank" href="pics/pic4.jpg">
-          <img src="pics/pic4.jpg" alt="Mountains" width="600" height="400">
+        <a target="_blank" href="pics/pic7.jpg">
+          <img src="pics/pic7.jpg" alt="Mountains" width="600" height="400">
         </a>
         <a target="_blank" href="pics/pic5.jpg">
           <img src="pics/pic5.jpg" alt="Cinque Terre" width="600" height="400">
@@ -53,10 +68,13 @@
         </a>
       </div>
     </div>
-    <div class="clearfix"></div>
-    <div style="padding:6px;">
-      <p>This example use media queries to re-arrange the images on different screen sizes: for screens larger than 700px wide, it will show four images side by side, for screens smaller than 700px, it will show two images side by side. For screens smaller than 500px, the images will stack vertically (100%).</p>
-      <p>You will learn more about media queries and responsive web design later in our CSS Tutorial.</p>
+    <div class="clearfix">
+
     </div>
+    <!-- <div class="wrapper">
+      <section class="profileHeader">
+        <p style="font-size:80%;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.</p>
+      </section>
+    </div> -->
   </body>
 </html>
