complete the first draft

--- a/gallery.html
+++ b/gallery.html
@@ -22,25 +22,36 @@
           <br>
           <br>
           <br>
-          <a href="gallery.html">PROJECT 1</a>
-          <a href="gallery.html">PROJECT 2</a>
-          <a href="gallery.html">PROJECT 3</a>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <a href="https://github.com/BrianSturgis/team_week">JAVASCRIPT TEAM WEEK PROJECT</a>
+          <br>
+          <br>
+          <br>
+          <a href="https://github.com/BrianSturgis/Currency-Convertor">CURRENCY CONVERTOR</a>
+          <br>
+          <br>
+          <br>
         </div>
       </header>
     </div>
     <div class="wrapper1">
       <section class="profileHeader">
-        <p style="font-size:80%;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.</p>
+        <p style="font-size:80%;">on the right you'll see a collection of some of my favorite photos i have taken over the years.  I snuck in on of myself for context.</p>
       </section>
     </div>
     <div class="wrapper2">
       <section class="profileHeader">
-        <p style="font-size:80%;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.</p>
+        <p style="font-size:80%;">the "javascript Team Week Project" link is to a project i did in my 8th week at Epicodus in which a small group of fellow Cohort and i built an Application.  It takes an image or video and with one button compress and size file into smaller file size an type.  It uses a javascript enviropment and the Coudinary API.  Directions to use it are in its README file. </p>
       </section>
     </div>
     <div class="wrapper3">
       <section class="profileHeader">
-        <p style="font-size:80%;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.</p>
+        <p style="font-size:80%;">The 2nd Project is a currency convertor web based application.  It uses an API call to a service to give up to the moment conversion rates for 5 different currencies</p>
       </section>
     </div>
     <div class="responsive">
