--- a/aboutMe.html
+++ b/aboutMe.html
@@ -27,7 +27,7 @@
     </div>
     <div class="wrapper">
       <section class="profileHeader">
-        <p style="font-size:80%;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.</p>
+        <p style="font-size:80%;">I am born and raised in the city of Portland Oregon and have studied computer sciences and the Multi Media world my whole life.  I have Produced Film Production, Concert Production, and am now switching to the Coding industry.  I Live alone with a cat named Hobbes and I love Photography, Auto Racing, and any art media i can get my hands on. </p>
       </section>
     </div>
     
