--- a/home.html
+++ b/home.html
@@ -38,5 +38,10 @@
   <div class="templatewireframe"> 
     <img src="assets/home.png" alt="web template wireframe" style="width: 100%">
   </div> 
+  <div class="wrapper1">
+    <section class="profileHeader">
+      <h1>BRIAN STURGIS</h1>
+      <p style="font-size:80%;">Welcome to my portfolio Web Application.</p>
+    </section>
 </body>
 </html>
