complete final edit of README

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -27,7 +27,14 @@
     </div>
     <div class="wrapper">
       <section class="profileHeader">
-        <p style="font-size:80%;">I am born and raised in the city of Portland Oregon and have studied computer sciences and the Multi Media world my whole life.  I have Produced Film Production, Concert Production, and am now switching to the Coding industry.  I Live alone with a cat named Hobbes and I love Photography, Auto Racing, and any art media i can get my hands on. </p>
+        <p style="font-size:80%;">I am born and raised in the city of Portland Oregon and have studied computer sciences and the Multi Media world my whole life.  I have Produced Film Production, Concert Production, and am now switching to the Coding industry.  I Live alone with a cat named Hobbes and I love Photography, Auto Racing, and any art media i can get my hands on. <em>Some of my favorite media are</em></p>
+        <ul>
+          <li>Pencil</li>
+          <li>Acrylic Paint </li>
+          <li>Photoshop</li>
+        </ul>  
+
+
       </section>
     </div>
     
