--- a/gallery.html
+++ b/gallery.html
@@ -41,22 +41,27 @@
     </div>
     <div class="wrapper1">
       <section class="profileHeader">
-        <p style="font-size:80%;">on the right you'll see a collection of some of my favorite photos i have taken over the years.  I snuck in on of myself for context.</p>
+        <p style="font-size:80%;">on the right you'll see a collection of some of my favorite photos i have taken over the years.  I snuck in one of myself for context.</p>
       </section>
     </div>
     <div class="wrapper2">
       <section class="profileHeader">
-        <p style="font-size:80%;">the "javascript Team Week Project" link is to a project i did in my 8th week at Epicodus in which a small group of fellow Cohort and i built an Application.  It takes an image or video and with one button compress and size file into smaller file size an type.  It uses a javascript enviropment and the Coudinary API.  Directions to use it are in its README file. </p>
+        <p style="font-size:80%;">the "javascript Team Week Project" link is to a project i did in my 8th week at <span style="color:rgb(6, 6, 245)">Epicodus</span> in which a small group of fellow Cohort and i built an Application.  It takes an image or video and with one button compress and size file into smaller file size an type.  It uses a <strong>javascript</strong> enviroment and the Cloudinary API.  Directions to use it are in its README file. </p>
       </section>
     </div>
     <div class="wrapper3">
       <section class="profileHeader">
-        <p style="font-size:80%;">The 2nd Project is a currency convertor web based application.  It uses an API call to a service to give up to the moment conversion rates for 5 different currencies</p>
+        <p style="font-size:80%;">The 2nd Project is a currency convertor web based application.  It uses an API call to a service to give up to the moment conversion rates for 5 different currencies.  It was one of the last projects i did in <strong>Intermediate Javascript</strong> and feel really proud at what it does and that i got it to actually work terrific.  Moving forward i have a few goals in program i picked up from this project. </p>
+        <ol>
+          <li>Stick to the MVP feature</li>
+          <li>Start with a pencil and paper</li>
+          <li>Keep it simple</li>
+        </ol>
       </section>
     </div>
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="pics/pic1.jpg">
+        <ul><a target="_blank" href="pics/pic1.jpg">
           <img src="pics/pic1.jpg" alt="Cinque Terre" width="600" height="400">
         </a>
         <a target="_blank" href="pics/pic2.jpg">
@@ -77,15 +82,12 @@
         <a target="_blank" href="pics/pic6.jpg">
           <img src="pics/pic6.jpg" alt="Cinque Terre" width="600" height="400">
         </a>
+        </ul>
+      
+      
       </div>
     </div>
     <div class="clearfix">
-
     </div>
-    <!-- <div class="wrapper">
-      <section class="profileHeader">
-        <p style="font-size:80%;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.</p>
-      </section>
-    </div> -->
   </body>
 </html>
