update picture descriptions in gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -62,26 +62,33 @@
     <div class="responsive">
       <div class="gallery">
         <ul><a target="_blank" href="pics/pic1.jpg">
-          <img src="pics/pic1.jpg" alt="Cinque Terre" width="600" height="400">
+          <img src="pics/pic1.jpg" alt="IDAHO OLD HOUSE" width="600" height="400">
         </a>
         <a target="_blank" href="pics/pic2.jpg">
-          <img src="pics/pic2.jpg" alt="Forest" width="600" height="400">
+          <img src="pics/pic2.jpg" alt="Pearl district wharehouse" width="600" height="400">
         </a>
         <a target="_blank" href="pics/pic3.jpg">
-          <img src="pics/pic3.JPG" alt="Northern Lights" width="600" height="400">
+          <img src="pics/pic3.JPG" alt="Snowy view from loft" width="600" height="400">
         </a>
         <a target="_blank" href="pics/pic4.jpg">
-          <img src="pics/pic4.jpg" alt="Mountains" width="600" height="400">
-        </a>
-        <a target="_blank" href="pics/pic7.jpg">
-          <img src="pics/pic7.jpg" alt="Mountains" width="600" height="400">
+          <img src="pics/pic4.jpg" alt="black lives matter protest pioneer square" width="600" height="400">
         </a>
         <a target="_blank" href="pics/pic5.jpg">
-          <img src="pics/pic5.jpg" alt="Cinque Terre" width="600" height="400">
+          <img src="pics/pic5.jpg" alt="picture of persons face" width="600" height="400">
         </a>
         <a target="_blank" href="pics/pic6.jpg">
           <img src="pics/pic6.jpg" alt="Cinque Terre" width="600" height="400">
         </a>
+        <a target="_blank" href="pics/pic7.jpg">
+          <img src="pics/pic7.jpg" alt="sunset in buckman portland oregon" width="600" height="400">
+        </a>
+        <ul><a target="_blank" href="pics/pic8.jpg">
+          <img src="pics/pic8.jpg" alt="music equipment set up" width="600" height="400">
+        </a>
+        <a target="_blank" href="pics/pic9.jpg">
+          <img src="pics/pic9.jpg" alt="Alladin theatre stage picture from stage" width="600" height="400">
+        </a>
+        
         </ul>
       </div>
     </div>
