--- a/Dgallery.html
+++ b/Dgallery.html
@@ -3,7 +3,7 @@
 <head>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <!-- <link href="*" rel="stylesheet">    fonts go here -->
-  <link href="css/galleryStyles.css" rel="stylesheet" type="text/css">
+  <link href="css/DgalleryStyles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/anime.js"></script>
   <script src="js/app.js"></script>
@@ -11,7 +11,6 @@
   <title>GALLERY</title>
 </head>
   <body>
-    
     <div class="container">
       <header>
         <div class="sidebar">
@@ -21,7 +20,7 @@
           <br>
           <br>
           <br>
-          <a href="Dgallery.html">dark mode</a>
+          <a href="gallery.html">light mode</a>
           <br>
           <br>
           <br>
