--- a/Dhome.html
+++ b/Dhome.html
@@ -20,7 +20,7 @@
         <a href="gallery.html">GALLERY</a>
         <br>
         <br>
-        <a href="Dhome.html">dark mode</a>
+        <a href="home.html">light mode</a>
         <br>
         <br>
         <br>
@@ -31,7 +31,7 @@
     </header>
   </div>
   <div class="templatewireframe"> 
-    <img src="assets/home.png" alt="web template wireframe" style="width: 100%">
+    <img src="assets/dhome.png" alt="web template wireframe" style="width: 100%">
   </div> 
   <div class="wrapper1">
     <section class="profileHeader">
