--- a/aboutMe.html
+++ b/aboutMe.html
@@ -13,7 +13,7 @@
   <body>
     <div class ="hero">
       <video playsinline autoplay muted loop id="vid">
-        <source src="vid/1_2.mp4" type="video/mp4"></source>
+        <source src="vid/ball.mp4" type="video/mp4"></source>
       </video>
     </div>
     <div class="container">
