clear wireframe art work

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -22,6 +22,7 @@
           <a class="active" href="aboutMe.html">ABOUT ME</a>
           <a href="gallery.html">GALLERY</a>
           <a href="home.html">HOME</a>
+          <a href="DaboutMe.html">dark mode</a>
         </div>
       </header>
     </div>
@@ -33,10 +34,7 @@
           <li>Acrylic Paint </li>
           <li>Photoshop</li>
         </ul>  
-
-
       </section>
     </div>
-    
   </body>
 </html>
