--- a/Dhome.html
+++ b/Dhome.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <!-- <link href="*" rel="stylesheet">    fonts go here -->
-  <link href="css/homeStyles.css" rel="stylesheet" type="text/css">
+  <link href="css/DhomeStyles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/anime.js"></script>
   <script src="js/app.js"></script>
