connect all dark mode pages to each other correctly

--- a/DaboutMe.html
+++ b/DaboutMe.html
@@ -13,7 +13,7 @@
   <body>
     <div class ="hero">
       <video playsinline autoplay muted loop id="vid">
-        <source src="vid/ball.mp4" type="video/mp4"></source>
+        <source src="vid/Dball.mp4" type="video/mp4"></source>
       </video>
     </div>
     <div class="container">
@@ -23,7 +23,7 @@
           <a href="gallery.html">GALLERY</a>
           <a href="home.html">HOME</a>
           <br>
-          <a href="DaboutMe.html">dark mode</a>
+          <a href="aboutMe.html">light mode</a>
           <br>
           <br>
           <br>
