update index.html splash video

--- a/DaboutMe.html
+++ b/DaboutMe.html
@@ -19,11 +19,12 @@
     <div class="container">
       <header>
         <div class="sidebar">
-          <a class="active" href="aboutMe.html">ABOUT ME</a>
-          <a href="gallery.html">GALLERY</a>
-          <a href="home.html">HOME</a>
+          <a class="active" href="DaboutMe.html">ABOUT ME</a>
+          <a href="Dgallery.html">GALLERY</a>
+          <a href="Dhome.html">HOME</a>
           <br>
           <a href="aboutMe.html">light mode</a>
+          <a href="index.html">index.html</a>
           <br>
           <br>
           <br>
