--- a/Dgallery.html
+++ b/Dgallery.html
@@ -15,12 +15,13 @@
       <header>
         <div class="sidebar">
           <a class="active" href="gallery.html">GALLERY</a>
-          <a href="home.html">HOME</a>
-          <a href="aboutMe.html">ABOUT ME</a>
+          <a href="Dhome.html">HOME</a>
+          <a href="DaboutMe.html">ABOUT ME</a>
           <br>
           <br>
           <br>
-          <a href="gallery.html">light mode</a>
+          <a href="Dgallery.html">light mode</a>
+          <a href="index.html">index.html</a>
           <br>
           <br>
           <a href="https://github.com/BrianSturgis/team_week">JAVASCRIPT TEAM WEEK PROJECT</a>
