--- a/Dhome.html
+++ b/Dhome.html
@@ -15,12 +15,13 @@
   <div class="container">
     <header>
       <div class="sidebar">
-        <a class="active" href="home.html">HOME</a>
-        <a href="aboutMe.html">ABOUT ME</a>
-        <a href="gallery.html">GALLERY</a>
+        <a class="active" href="Dhome.html">HOME</a>
+        <a href="DaboutMe.html">ABOUT ME</a>
+        <a href="Dgallery.html">GALLERY</a>
         <br>
         
         <a href="home.html">light mode</a>
+        <a href="index.html">index.html</a>
         <br>
         <br>
         <br>
