--- a/aboutMe.html
+++ b/aboutMe.html
@@ -24,6 +24,7 @@
           <a href="home.html">HOME</a>
           <br>
           <a href="DaboutMe.html">dark mode</a>
+          <a href="index.html">index.html</a>
           <br>
           <br>
           <br>
