--- a/gallery.html
+++ b/gallery.html
@@ -22,6 +22,7 @@
           <br>
           <br>
           <a href="Dgallery.html">dark mode</a>
+          <a href="index.html">index.html</a>
           <br>
           <br>
           <a href="https://github.com/BrianSturgis/team_week">JAVASCRIPT TEAM WEEK PROJECT</a>
