--- a/home.html
+++ b/home.html
@@ -20,6 +20,7 @@
         <a href="gallery.html">GALLERY</a>
         <br>
         <a href="Dhome.html">dark mode</a>
+        <a href="index.html">index.html</a>
         <br>
         <br>
         <br>
