--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
   <div class ="hero">
     <video playsinline autoplay muted loop id="vid">
-      <source src="vid/1_2.mp4" type="video/mp4"></source>
+      <source src="vid/1_3.mp4" type="video/mp4"></source>
     </video>
   </div>
   <div class="container">
     <div class="indexButtons" id="buttons">
       <a href="home.html" type="button" id="enter">ENTER SITE</a>
-      <a href="DmHome.html" type="button"  id="darkMode">DARK MODE HOME</a> 
+      <a href="DHome.html" type="button"  id="darkMode">DARK MODE HOME</a> 
     </div>
   </div>
 </html>
