update READM.md to current version

--- a/DaboutMe.html
+++ b/DaboutMe.html
@@ -2,8 +2,7 @@
 <html lang="en-US">
 <head>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-  <!-- <link href="*" rel="stylesheet">    fonts go here -->
-  <link href="css/aboutMeStyles.css" rel="stylesheet" type="text/css">
+  <link href="css/DaboutMeStyles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/anime.js"></script>
   <script src="js/app.js"></script>
