delete gh-pages branch

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="indexButtons" id="buttons">
       <a href="home.html" type="button" id="enter">ENTER SITE</a>
-      <a href="DHome.html" type="button"  id="darkMode">DARK MODE HOME</a> 
+      <a href="Dhome.html" type="button"  id="darkMode">DARK MODE HOME</a> 
     </div>
   </div>
 </html>
