--- a/Dgallery.html
+++ b/Dgallery.html
@@ -34,17 +34,17 @@
     </div>
     <div class="wrapper1">
       <section class="profileHeader">
-        <p style="font-size:80%;">on the right you'll see a collection of some of my favorite photos i have taken over the years.  I snuck in one of myself for context.</p>
+        <p style="font-size:80%;"><strong>On</strong> the right you'll see a collection of some of my favorite photos i have taken over the years.  I snuck in one of myself for context.</p>
       </section>
     </div>
     <div class="wrapper2">
       <section class="profileHeader">
-        <p style="font-size:80%;">the "javascript Team Week Project" link is to a project i did in my 8th week at <span style="color:rgb(6, 6, 245)">Epicodus</span> in which a small group of fellow Cohort and i built an Application.  It takes an image or video and with one button compress and size file into smaller file size an type.  It uses a <strong>javascript</strong> enviroment and the Cloudinary API.  Directions to use it are in its README file. </p>
+        <p style="font-size:80%;"><Strong>The</Strong> "javascript Team Week Project" link is to a project i did in my 8th week at <span style="color:rgb(255, 255, 255)">Epicodus</span> in which a small group of fellow Cohort and i built an Application.  It takes an image or video and with one button compress and size file into smaller file size an type.  It uses a <strong>javascript</strong> enviroment and the Cloudinary API.  Directions to use it are in its README file. </p>
       </section>
     </div>
     <div class="wrapper3">
       <section class="profileHeader">
-        <p style="font-size:80%;">The 2nd Project is a currency convertor web based application.  It uses an API call to a service to give up to the moment conversion rates for 5 different currencies.  It was one of the last projects i did in <strong>Intermediate Javascript</strong> and feel really proud at what it does and that i got it to actually work terrific.  Moving forward i have a few goals in program i picked up from this project. </p>
+        <p style="font-size:80%;"><strong>The</strong> 2nd Project is a currency convertor web based application.  It uses an API call to a service to give up to the moment conversion rates for 5 different currencies.  It was one of the last projects i did in <strong>Intermediate Javascript</strong> and feel really proud at what it does and that i got it to actually work terrific.  Moving forward i have a few goals in program i picked up from this project. </p>
         <ol>
           <li>Stick to the MVP feature</li>
           <li>Start with a pencil and paper</li>
